2000-09-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-_checkPerformers:]) When a loop executes the
	method to deal with a ([-performSelector:target:argument:order:modes]),
	we cancel the request rather than leaving it to be actioned again next
	time round the loop.

2000-09-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSGeometry.m: Add code to parse MacOS-X format strings.
	Also produce MacOS-X format strings if the GSMacOSXCompatibleGeometry
	or GSMacOSXCompatible default is YES (the former overrides the latter).
	* Source/NSException.m: ([-name]) and ([-reason]) modifide to ensure
	that a nil is never returned.

2000-09-01  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/NSString.h:
	Added new encodings from specification
	* Headers/gnustep/base/NSNumberFormatter.h:
	* Source/NSNumberFormatter.m:
	Added skeleton for this class
	*Source/GNUmakefile:
	Added NSNumberFormatter.[hm]

2000-08-27  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc-0_6_6.dtd: added elements for gnustep-db doc generator
	* Tools/gsdoc.m: handle gnustep-db doc generator

2000-08-24  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc-0_6_6.dtd: added prjref element which enable explicit 
		links between projects
	* Tools/gsdoc.m:  handle prjref
			 remove extensions from files  in gsdocrefs 
			(one day we'll generate other formats :-)

2000-08-23  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/NSDecimal.h:
	Use signed char for exponent, as char may be unsigned on some machines
	* Source/NSDecimal.m:
	Corrected some bugs and added a basic implementation based on GMP
	(Still not complete)

2000-08-23  Adam Fedor  <fedor@gnu.org>

	* Source/NSDebug.m (NSFrameAddress): New function
	(NSReturnAddress): Likewise.
	(NSCountFrames): Likewise. (impementation from alex@orderfusion.com).

2000-08-16  Manuel Guesdon <mguesdon@orange-concept.com>

	* Tools/gsdoc-0_6_6.dtd: added conform for category